discussion/kv_engine/125901/125901_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38673: Add new Privilege failure for no privileges

Add a new failure code to privilege checks which lets the caller
distinguish between a failure because the privilege wasn't found and a
failure where not only is the privilege not found but the user has no
privileges for the scope/collection.

The differing failure is important for returning an appropriate error
code based on the following:

1) When a user has no privileges for the scope or collection, it
   makes the scope or collection invisible. Status::FailNoPrivileges
2) When a user has some privileges for a scope or collection, but not
   the requested privilege the scope/collection is visible and the
   current operation can be failed with a no access error. Status::Fail

Internally to the privilege database the following logic is used to
return Status::Fail or Status::FailNoPrivileges.

The Bucket counts how many privileges in its set are collection
privileges (the bucket can have both collection privileges e.g. Read
and non collection e.g. Audit)
  - A collection privilege at the Bucket means every collection in the
    system gets that privilege, e.g. Read := you can Read everything.
  - When Bucket::check cannot find a requested collection privilege and
    no scope/collection search is possible it decides the error using
    the count of collection privileges - the rule being, >0 privileges
    makes collections visible.

The Scope::check now accepts a new parameter, which is the number of
collection privileges found in the parent (the Bucket)
  - The Scope can itself have an empty privilege set in the case where
    it is just a conduit from Bucket to Collection.
  - If the Scope::check fails it uses the count of its own privileges
    and the count of the parent privileges to determine Fail or
    FailNoPrivileges.

The Collection::check is unchanged - the assumption is that the
Collection privilege set should not be empty (now checked in
construction)
  - With the set always storing at least one collection privilege, if
    you reach Collection::check the only error can be Fail.

Change-Id: I2c8c1cc7bf27a132bb522839f70239d9cff3f029

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-04-17 18:21:30.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-17 18:52:52.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27591/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\dcp\active_stream.cc(2016): error C2065: "producer": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27591/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1765/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/cookie.h:671:9: warning: use "= default" to define a trivial default constructor [modernize-use-equals-default]
        CurrentCollectionInfo() {
        ^                       ~
                                = default;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/mcbp_executors.cc:844:44: error: no member named "getStatusCode" in "cb::rbac::PrivilegeAccess"; did you mean "getStatus"? [clang-diagnostic-error]
            std::to_string(uint32_t(access.getStatusCode())));
                                           ^~~~~~~~~~~~~
                                           getStatus
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/rbac/privileges.h:225:12: note: "getStatus" declared here
    Status getStatus() const {
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/mcbp_executors.cc:860:44: error: no member named "getStatusCode" in "cb::rbac::PrivilegeAccess"; did you mean "getStatus"? [clang-diagnostic-error]
            std::to_string(uint32_t(access.getStatusCode())));
                                           ^~~~~~~~~~~~~
                                           getStatus
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/rbac/privileges.h:225:12: note: "getStatus" declared here
    Status getStatus() const {
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32: error: use of undeclared identifier "producer" [clang-diagnostic-error]
    if (filter.checkPrivileges(producer->getCookie(), *engine) !=
                               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1765/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/mcbp_executors.cc:844:44:
error: no member named "getStatusCode" in "cb::rbac::PrivilegeAccess"; did you mean "getStatus"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1765/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/284/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/src/dcp/active_stream.cc b/engines/ep/src/dcp/active_stream.cc
index cc53fd2..c3191c8 100644
--- a/engines/ep/src/dcp/active_stream.cc
+++ b/engines/ep/src/dcp/active_stream.cc
@@ -2014,7 +2014,7 @@ void ActiveStream::closeIfRequiredPrivilegesLost(const void* cookie) {
     std::unique_lock lh(streamMutex);
     // Does this stream still have the appropriate privileges to operate?
     if (filter.checkPrivileges(producer-&gt;getCookie(), *engine) !=
-                cb::engine_errc::success) {
+        cb::engine_errc::success) {
         endStream(END_STREAM_LOST_PRIVILEGES);
         lh.unlock();
         notifyStreamReady();

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/284/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23592/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: use of undeclared identifier "producer"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23592/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3195/ : FAILURE

Compile error at [2020-04-17T18:49:11.592Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: ?producer? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3195/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11047/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2239/ : FAILURE

Compile error at [2020-04-17T18:23:14.709Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: use of undeclared identifier "producer"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2239/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3256/ : FAILURE

Compile error at [2020-04-17T18:50:36.292Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: ?producer? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3256/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3179/ : FAILURE

Compile error at [2020-04-17T18:47:57.147Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: ?producer? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3179/ )
----------------------------------------------------------------------------------------------------------------------
